--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="node_modules/ng2-pagination/dist/ng2-pagination-bundle.js"></script>
     <script>
         System.config({
             packages: {
