Change main selector

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <main-app [is-logged-in]="true"></main-app>
+    <wc-app [is-logged-in]="true"></wc-app>
 
     <!-- /.Row View -->
     <!--Footer
