--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <footer class="footer">
         <div class="container">
             <div class="row">
-                <div class="span6">
+                <div class="col-xs-12">
                     Copyright &copy; <span id="year"></span> Skillray Transport Services | All Rights Reserved
                     <br>
                     <small>Developed by <a href="http://www.jpreecedev.com">Jon Preece Development Ltd</a>.</small>
