--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Secure and reliable digital and analogue tachograph calibration software, modern, super quick and easy to use.">
+    <meta name="author" content="Skillray Transport Services Ltd">
 
     <!-- inject:css -->
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
