--- a/index.html
+++ b/index.html
@@ -27,21 +27,14 @@
 <body>
 
     <wc-app [is-logged-in]="true">
-        <div class="sk-fading-circle">
-            <div class="sk-circle1 sk-circle"></div>
-            <div class="sk-circle2 sk-circle"></div>
-            <div class="sk-circle3 sk-circle"></div>
-            <div class="sk-circle4 sk-circle"></div>
-            <div class="sk-circle5 sk-circle"></div>
-            <div class="sk-circle6 sk-circle"></div>
-            <div class="sk-circle7 sk-circle"></div>
-            <div class="sk-circle8 sk-circle"></div>
-            <div class="sk-circle9 sk-circle"></div>
-            <div class="sk-circle10 sk-circle"></div>
-            <div class="sk-circle11 sk-circle"></div>
-            <div class="sk-circle12 sk-circle"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <p>Loading, please wait...</p>
+                </div>
+            </div>
         </div>
-</wc-app>
+    </wc-app>
 
     <!-- /.Row View -->
     <!--Footer
