--- a/index.html
+++ b/index.html
@@ -68,16 +68,7 @@
     <!-- endinject -->
 
     <script>
-        System.config({
-            packages: {
-                app: {
-                    format: 'register',
-                    defaultExtension: 'js'
-                }
-            }
-        });
-        System.import('app/main')
-            .then(null, console.error.bind(console));
+System.config({packages:{app:{format:"register",defaultExtension:"js"}}}),System["import"]("app/main").then(null,console.error.bind(console));
     </script>
     <script>
         (function(){
@@ -85,13 +76,7 @@
         })();
     </script>
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-42743116-3', 'auto');
-            ga('send', 'pageview');
+!function(e,t,a,n,c,s,o){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,s=t.createElement(a),o=t.getElementsByTagName(a)[0],s.async=1,s.src=n,o.parentNode.insertBefore(s,o)}(window,document,"script","https://www.google-analytics.com/analytics.js","ga"),ga("create","UA-42743116-3","auto"),ga("send","pageview");
     </script>
 </body>
 
