Added status report with static data

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/ng2-pagination/dist/ng2-pagination-bundle.js"></script>
     <script src="node_modules/bootbox/bootbox.min.js"></script>
+    <script src="lib/chart.min.js"></script>
+    <script src="lib/gauge.min.js"></script>
     <!-- endinject -->
 
     <script>
