--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
     <!-- inject:css -->
     <link rel="stylesheet" type="text/css" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/site.css" />
+    <link rel="stylesheet" type="text/css" href="node_modules/pikaday/css/pikaday.css" />
     <link rel="stylesheet" type="text/css" href="node_modules/font-awesome/css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" href="/css/site.css" />
     <!-- endinject -->
 
     <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel="stylesheet" type="text/css">
@@ -60,6 +61,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/ng2-pagination/dist/ng2-pagination-bundle.js"></script>
     <script src="node_modules/bootbox/bootbox.min.js"></script>
+    <script src="node_modules/pikaday/pikaday.js"></script>
     <script src="lib/systemjs.config.js"></script>
     <script src="lib/chart.min.js"></script>
     <script src="lib/gauge.min.js"></script>
