--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <!-- endinject -->
 
     <script>
-      System.import('app').catch(function(err){ console.error(err); });
+      System.import('main').catch(function(err){ console.error(err); });
     </script>
     <script>
         (function(){
