Force redirect to HTTPS

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     </script>
     <script>
         (function(){
+            if (window.location.protocol != "https:")
+                window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
             document.getElementById("year").innerText = new Date().getFullYear();
         })();
     </script>
