Allow recent calibrations to be filtered by Vehicle Registration

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <script src="lib/systemjs.config.js"></script>
     <script src="lib/chart.min.js"></script>
     <script src="lib/gauge.min.js"></script>
+    <script src="lib/app.js"></script>
     <!-- endinject -->
 
     <script>
