--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script src="node_modules/core-js/client/shim.min.js"></script>
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
-    <script src="node_modules/systemjs/dist/system.src.js"></script>    
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="node_modules/ng2-pagination/dist/ng2-pagination-bundle.js"></script>
@@ -72,12 +72,7 @@
       System.import('main').catch(function(err){ console.error(err); });
     </script>
     <script>
-        (function(){
-            if (window.location.protocol != "https:" && window.location.href.indexOf("webcalconnect.com") > -1) {
-                window.location.href = "https:" + window.location.href.substring(window.location.protocol.length);
-            }
-            document.getElementById("year").innerText = new Date().getFullYear();
-        })();
+        !function(){"https:"!=window.location.protocol&&window.location.href.indexOf("webcalconnect.com")>-1&&(window.location.href="https:"+window.location.href.substring(window.location.protocol.length)),-1===window.location.host.indexOf("www")&&(window.location.href="https://www.webcalconnect.com/"+window.location.hash),document.getElementById("year").innerText=(new Date).getFullYear()}();
     </script>
     <script>
         !function(e,t,a,n,c,s,o){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,s=t.createElement(a),o=t.getElementsByTagName(a)[0],s.async=1,s.src=n,o.parentNode.insertBefore(s,o)}(window,document,"script","https://www.google-analytics.com/analytics.js","ga"),ga("create","UA-42743116-3","auto"),ga("send","pageview");
