Added additional Google Analytics tracking events

--- a/index.html
+++ b/index.html
@@ -83,10 +83,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       System.import('main').catch(function(err){ console.error(err); });
     </script>
     <script>
-        !function(){"https:"!=window.location.protocol&&window.location.href.indexOf("webcalconnect.com")>-1&&(window.location.href="https:"+window.location.href.substring(window.location.protocol.length)),-1===window.location.host.indexOf("www")&&(window.location.href="https://www.webcalconnect.com/"+window.location.hash),document.getElementById("year").innerText=(new Date).getFullYear()}();
-    </script>
-    <script>
-        !function(e,t,a,n,c,s,o){e.GoogleAnalyticsObject=c,e[c]=e[c]||function(){(e[c].q=e[c].q||[]).push(arguments)},e[c].l=1*new Date,s=t.createElement(a),o=t.getElementsByTagName(a)[0],s.async=1,s.src=n,o.parentNode.insertBefore(s,o)}(window,document,"script","https://www.google-analytics.com/analytics.js","ga"),ga("create","UA-42743116-3","auto");
+        !function(){window.location.href.indexOf("localhost")>-1||("https:"!=window.location.protocol&&window.location.href.indexOf("webcalconnect.com")>-1&&(window.location.href="https:"+window.location.href.substring(window.location.protocol.length)),-1===window.location.host.indexOf("www")&&(window.location.href="https://www.webcalconnect.com/"+window.location.hash),document.getElementById("year").innerText=(new Date).getFullYear())}();
     </script>
 </body>
 
