--- a/index.html
+++ b/index.html
@@ -26,18 +26,6 @@
 </head>
 
 <body>
-
-    <!-- Google Tag Manager -->
-    <noscript>
-        <iframe src="//www.googletagmanager.com/ns.html?id=GTM-54RD4L" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-    </noscript>
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-54RD4L');</script>
-    <!-- End Google Tag Manager -->
-
     <wc-app [is-logged-in]="true">
         <div class="container">
             <div class="row">
@@ -85,6 +73,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <script>
         !function(){window.location.href.indexOf("localhost")>-1||("https:"!=window.location.protocol&&window.location.href.indexOf("webcalconnect.com")>-1&&(window.location.href="https:"+window.location.href.substring(window.location.protocol.length)),-1===window.location.host.indexOf("www")&&(window.location.href="https://www.webcalconnect.com/"+window.location.hash),document.getElementById("year").innerText=(new Date).getFullYear())}();
     </script>
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-42743116-3', 'auto');
+    </script>
+    <!-- End Google Analytics -->
 </body>
 
 </html>
