--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <meta name="description" content="Secure and reliable digital and analogue tachograph calibration software, modern, super quick and easy to use.">
     <meta name="author" content="Skillray Transport Services Ltd">
 
+    <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel="stylesheet" type="text/css">
     
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
