--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <base href="/">
     <title>WebcalConnect - Online Tachograph Calibration Software</title>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Secure and reliable digital and analogue tachograph calibration software, modern, super quick and easy to use.">
     <meta name="author" content="Skillray Transport Services Ltd">
 
     <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel="stylesheet" type="text/css">
-    
+
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
