--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/x-icon" href="public/favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600' rel="stylesheet" type="text/css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="site.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -58,6 +59,7 @@
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
         ga('create', 'UA-42743116-3', 'auto');
     </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/4.4.0/bootbox.min.js"></script>
     <!-- End Google Analytics -->
 </body>
 
